--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 /* The code below makes the background of the header black and the font color of the title white. Change this to match what you want for your website. */
-header {
-    background-color: black;
-    color: white;
-    padding: 128px 16px;
+img {
+  width:500px;
+}
+
+  h1 {
+    font-size: 70px;
+  }
+p {
+  font-size: 20px;
+}
+h2 {
+  font-size: 20px;
 }
